commentaire passé en anglais, déclaration encore de final sur les variable d'instance dans le main, Suppresion des i pour le nom de interface. mon projet semble complet, dernière vérification avant merge.